<resources>
    <string name="app_name">NamOps Drivers Portal</string>
    <string name="Cancel">Cancel</string>
    <string name="dev_qualification">BSc in Electrical and Computer Engineering\nUniversity of Cape Town</string>
    <string name="OK">OK</string>
    <string name="signout">SignOut</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="info">Info</string>
    <string name="about_developer">About Developer</string>
    <string name="user_avatar">User avatar</string>
    <string name="no_trip_found">You have not started a trip yet.</string>
    <string name="un_assigned">Un-Assigned Jobs</string>
    <string name="pre_assigned">Pre-Assigned Jobs</string>

    <string name="snap_nothing_here">Snap! There \'s nothing here.</string>
    <string name="truck_reg">Truck number e.g. H01</string>
    <string name="first_trailer">Trailer 1 plate number</string>
    <string name="second_trailer_reg">Trailer 2 plate number</string>
    <string name="truck_odo">Truck odometer reading</string>
    <string name="register">Save</string>
    <string name="current_location_name">Current Location Name</string>
    <string name="weigh_empty">Weigh Empty </string>
    <string name="pick_up">Pick Up Container</string>
    <string name="weigh_full">Weigh Loaded Truck</string>
    <string name="drop_off">Drop-Off Container</string>
    <string name="to_do_next">To Do Next</string>
    <string name="weigh_full_bridge">Weigh Loaded </string>
    <string name="weigh_full_bison">Weigh Loaded Truck [Bison]</string>
    <string name="truck_weight">Truck weight</string>
    <string name="my_truck">My Truck</string>
    <string name="first_container_number">Select 1st Container</string>
    <string name="_2nd_container_number">Select 2nd Container</string>
    <string name="_3rd_container_number">Select 3rd Container</string>
    <string name="extra_notes_if_any">Extra notes if any</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="password">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="surname">Surname</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="drivers">Drivers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_driver_on_jc">There are no drivers on this job card yet.</string>
    <string name="no_containers_txt">No containers.</string>
</resources>