<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_my_profile"
            />
        <item
            android:id="@+id/nav_my_truck"
            android:title="@string/my_truck"
            android:icon="@drawable/ic_my_profile"
            />

        <item android:title="@string/info"
            android:id="@+id/info"
            >
            <menu>
                <item android:title="@string/about_developer"
                    android:id="@+id/about_developer"
                    android:icon="@drawable/ic_my_profile"
                    />
            </menu>
        </item>
    </group>
</menu>