<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container1_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/container1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="8dp"
                    android:text="@={trip.container1}"
                    android:hint="@string/first_container_number"
                    android:inputType="text"
                    android:singleLine="true"
                    containerNo="@{trip.container1}"
                    jobCard="@{jobcard}"
                    containerIndex="@{1}"
                    trip="@{trip}"
                    /></com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container2_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               app:layout_constraintTop_toBottomOf="@id/container1_layout"
                app:layout_constraintStart_toStartOf="parent"
                >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/container2"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:text="@={trip.container2}"
                    android:hint="@string/_2nd_container_number"
                    android:inputType="text"
                    android:singleLine="true"
                    containerNo="@{trip.container2}"
                    jobCard="@{jobcard}"
                    containerIndex="@{2}"
                    trip="@{trip}"
                    /></com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container3_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintTop_toBottomOf="@id/container2_layout"
                app:layout_constraintStart_toStartOf="parent"
                >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/container3"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:padding="9dp"
                    android:text="@={trip.container3}"
                    android:hint="@string/_3rd_container_number"
                    android:inputType="text"
                    android:singleLine="true"
                    containerNo="@{trip.container3}"
                    jobCard="@{jobcard}"
                    containerIndex="@{3}"
                    trip="@{trip}"
                    /></com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startODM_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container3_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startODM"
                editContent="@{trip.pickUpODM}"
                errorMsg="@{`Please input the truck Odometer.`}"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/truck_odo"
                android:inputType="number"
                android:paddingBottom="9dp"
                android:layout_marginBottom="7dp"
                android:text="@={trip.pickUpODM}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startLocationName_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startODM_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startLocationName"
                editContent="@{trip.pickUpLocationName}"
                errorMsg="@{`Please input the current location name.`}"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/current_location_name"
                android:inputType="text"
                android:paddingBottom="9dp"
                android:text="@={trip.pickUpLocationName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/save_btn_outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startLocationName_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

<data>
<variable
    name="trip"
    type="com.pet001kambala.namopscontainers.model.Trip" />

<variable
    name="jobcard"
    type="com.pet001kambala.namopscontainers.model.JobCard" />
</data></layout>
