<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            tools:context=".ui.home.HomeFragment">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pre_assigned_job"
                style="@style/save_btn_outlined_less_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/hint_color"
                android:padding="20dp"
                android:visibility="@{(trip == null || trip.tripStatus==TripStatus.COMPLETED)? View.VISIBLE: View.GONE}"
                android:text="@string/pre_assigned"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/unassigned_job"
                style="@style/save_btn_outlined_less_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="20dp"
                android:visibility="@{(trip == null || trip.tripStatus==TripStatus.COMPLETED)? View.VISIBLE: View.GONE}"
                android:text="@string/un_assigned"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_assigned_job" />

            <include
                android:id="@+id/text_sep"
                layout="@layout/text_separator_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/unassigned_job"
                bind:title="@{`Current Trip`}" />

            <include
                android:id="@+id/trip_layout"
                layout="@layout/trip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{(trip == null || trip.tripStatus==TripStatus.COMPLETED)?View.GONE: View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@id/text_sep"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                bind:trip="@{trip}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/no_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/no_trip_found"
                android:textColor="@color/hint_color"
                android:textStyle="bold"
                android:visibility="@{(trip == null || trip.tripStatus==TripStatus.COMPLETED)?View.VISIBLE: View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_sep" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <data>
        <import type="android.view.View" />
        <import type="com.pet001kambala.namopscontainers.model.TripStatus"/>
        <variable
            name="trip"
            type="com.pet001kambala.namopscontainers.model.Trip" />
    </data>
</layout>

